# copybuild

./: .gitignore  .gitmodules  CMakeLists.txt  DoomNukem  Makefile  README.md  author  checksum  doom_nukem  freefps  wolf3d
CMake/: sdl2-config.cmake
checksum.dSYM/Contents/: Info.plist
checksum.dSYM/Contents/Resources/DWARF/: checksum
editor/: 1.lvl  Makefile  author
editor/includes/: editor.h
editor/libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+23 more)
editor/resources/: .txt
editor/sources/editor/: bigloop.c  check_intersect_l.c  check_intersect_r.c  check_local_intersects.c  check_overlays.c  check_the_touch.c  clicks.c  clockwise.c  commands.c  cut_the_rope.c  draw.c  draw_buttons0.c  draw_buttons1.c  draw_buttons2.c  draw_grid.c  draw_headline.c  draw_input_field.c  draw_sidebar.c  editor.c  events.c  init.c  init_grid.c  points_of_sect.c  put_stuff.c  redraw.c  remover.c  save_map.c  save_utils.c  save_wall.c  status_text.c  take_a_lap.c  utils.c  write_objects.c  write_to_file.c  write_vertexes.c
editor/srcs/: checksum.c  checksum_errors.c
engine/includes/: SDL_ttf.h  engine.h  fixed_point_math.h
engine/includes/SDL2/: SDL.h
engine/srcs/: animator.c  bresenham.c  bresenham2.c  checksum.c  checksum_errors.c  close.c  color.c  cross.c  draw.c  engine.c  engine_close.c  engine_door_stack.c  engine_door_stack_2.c  engine_font.c  engine_init_sectors.c  engine_main.c  engine_render_background.c  engine_render_text.c  engine_render_twall_cycler.c  engine_render_twall_help.c  engine_render_twall_main.c  engine_render_twall_main2.c  engine_render_twalls.c  engine_texture.c  engine_texture_scale_koef.c  engine_transprt_stack.c  engine_wall_objects_init.c  error_handler.c  font.c  ft_atoi_hex.c  ft_strsplitwhitespaces.c  ft_strwcmp.c  game_pickup.c  game_pickup_2.c  hud_draw.c  hud_draw1.c  images.c  init_sectors.c  intersection_funs.c  intersection_funs_help.c  (+96 more)
engine/srcs/utility/: fixed_point_math.c
freefps.dSYM/Contents/: Info.plist
game/includes/: game.h
game/resources/: 1.lvl  2.lvl
game/resources/images/: m_button.xcf  m_menu.xcf  s_atrium.xcf  s_atrium_2.xcf
game/resources/levels/: 1.lvl  2.lvl  3.lvl  4.lvl  5.txt  6.lvl
game/resources/sprites/: key.xcf  m_button.xcf  m_menu.xcf  m_menu_window.xcf
game/srcs/: cross.c  end.c  fps_game.c  freefps.c  game_collision_detector.c  game_controller_down.c  game_controller_up.c  game_end.c  game_gravitation.c  game_menu.c  game_menu_2.c  game_menu_3.c  game_movement.c  game_movement_funs.c  game_multi_threading.c  game_pickup.c  game_pickup_2.c  game_run.c  game_run_controller.c  game_start.c  game_weapon_fire.c  gravitation.c  handlers.c  menu.c  menu_2.c  menu_3.c  multi_threading.c  parser_filename.c  parser_game.c  parser_menu.c  run_controller.c  weapon_fire.c
lib/sdl2/: libSDL2-2.0.0.dylib
lib/sdl2/cmake/SDL2/: sdl2-config.cmake
lib/sdl2/pkgconfig/: sdl2.pc
lib/sdl_mixer/: Makefile  config.status  libtool
lib/sdl_mixer/build_library/: libSDL2_mixer.la
lib/sdl_ttf/: Makefile  config.status  glfont  libSDL2_ttf.la  libtool  showfont
lib/sdl_ttf/.deps/: SDL_ttf.Plo  glfont.Po  showfont.Po
lib/sdl_ttf/.libs/: glfont  libSDL2_ttf-2.0.0.dylib  libSDL2_ttf.lai  showfont
lib/sdl_ttf/.libs/libSDL2_ttf-2.0.0.dylib.dSYM/Contents/: Info.plist
lib/sdl_ttf/.libs/libSDL2_ttf-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libSDL2_ttf-2.0.0.dylib
